@@ -8,7 +8,6 @@ import org.json.JSONObject;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
 
@@ -22,7 +21,7 @@ public class DataReportUtils {
         FileAccess fileAccess = new FileAccess();
         this.filePath = fileAccess.getPathOf("report.json");
         File file = new File(filePath);
-        String fileContent = new String(Files.readAllBytes(file.toPath()), StandardCharsets.UTF_8);
+        String fileContent = Files.readString(file.toPath());
         data = new JSONObject(fileContent);
     }
 
@@ -49,7 +48,7 @@ public class DataReportUtils {
     public ArrayList<Report> getReports(User user) throws IOException {
         try {
             boolean isAdmin = user.getIsAdmin();
-            if(!isAdmin) {
+            if (!isAdmin) {
                 return new ArrayList<Report>();
             }
         } catch (Exception e) {
@@ -66,7 +65,7 @@ public class DataReportUtils {
         return reports;
     }
 
-    public ArrayList<Report> getReportsByReferent(String referent) throws IOException {
+    public ArrayList<Report> getReportsByReferent(String referent) {
         ArrayList<Report> reports = new ArrayList<Report>();
         for (String key : data.keySet()) {
             JSONObject reportObject = data.getJSONObject(key);
